@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 09:35:12 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 11:24:40 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -96,5 +96,11 @@
   <description>NCTDREAM將於高尺天空巨蛋舉行三場演唱會NCTDREAM將於11月29日至12月1日在首爾高尺天空巨蛋舉行三場演唱會作為其世界巡迴演唱會的結束該組合將再次登上五月份啟動巡迴演唱會NCTDREAMWORLDTOUR的同一舞台該樂團已經訪問了亞洲八個城市北美和拉...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 09:35:12 +0800</pubDate>
+</item><item>
+  <title>K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？</title>
+  <link>https://www.famechos.me/news/K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？.html</link>
+  <description>Kpop偶像lipsync爭議再起隨著Kpop偶像在全球日益受歡迎歌迷對他們的現場表演也有了更高的期望許多Kpop歌迷現在期待在現場表演中聽到令人印象深刻的歌聲對lipsync的忍耐度也越來越...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 11:24:40 +0800</pubDate>
 </item></channel>
 </rss>
