@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 11:22:19 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 11:24:40 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -133,5 +133,11 @@
   <description>在神田神社體驗傳統故事的全女性演出位於秋葉原附近的神田神社有一場必看的演出TheShow這場演出以全女性演員來慶祝傳統故事的傳承講述了平安時代著名的日本詩人小野小町的傳奇...</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 11:22:19 +0800</pubDate>
+</item><item>
+  <title>K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？</title>
+  <link>https://www.famechos.me/news/K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？.html</link>
+  <description>Kpop偶像lipsync爭議再起隨著Kpop偶像在全球日益受歡迎歌迷對他們的現場表演也有了更高的期望許多Kpop歌迷現在期待在現場表演中聽到令人印象深刻的歌聲對lipsync的忍耐度也越來越...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 11:24:40 +0800</pubDate>
 </item></channel>
 </rss>
