@@ -19,3 +19,4 @@ https://tokyocheapo.com/living/moving-to-japan-hacks/
 https://www.koreaherald.com/view.php?ud=20241011050615
 https://www.koreaherald.com/view.php?ud=20241001050062
 https://www.koreaherald.com/view.php?ud=20241008050607
+https://tokyocheapo.com/entertainment/movies-theatre/kanda-myojin-show/
